# parsec

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  format.sh  parsec.hpp  pq-needs.sh  pq-roadmap.md  test_config.yaml  test_mesh.json  test_users.json  todo.txt  vulcan.toml
examples/: allow_missing_comma.json  array.json  deprecated_enum_example.json  deprecated_property_example.json  deprecated_schema.json  extra-comma.json  high.ron  medium.ron  medium_schema_check.ron  medium_schema_fail.ron  nested.json  sample.ini  sample.ron  sample.toml  sample.yaml  simple.json  vulcan.yml
examples/not-anyof-prefix/: bad.json  hs_schema.json  valid.json
include/ps/: dictionary.hpp  parsec.hpp  simple_json.hpp
parsec/: CMakeLists.txt
parsec/src/: json_parser.cpp  parsec.cpp
parsec/tests/: CMakeLists.txt  test_parse_examples.cpp  test_parsec.cpp
schemas/: cfd_schema.json  medium_schema.json  simple_schema.json
src/: CMakeLists.txt
src/include/ps/: cli_utils.h  dictionary.h  dictionary.hpp  ini.h  json.h  parse.h  parse.hpp  parsec.h  parsec.hpp  ron.h  ron.hpp  simple_json.hpp  toml.h  validate.h  validate.hpp  xml.h  yaml.h
src/include/ps/pq/: cli_args.h  navigator.h  output_formatter.h  path_parser.h
src/src/: defaults.cpp  dictionary.cpp  ini_parser.cpp  json_parser.cpp  main.cpp  parse.cpp  parsec.cpp  ron_parser.cpp  ron_printer.cpp  toml_parser.cpp  toml_printer.cpp  validate.cpp  xml_parser.cpp  yaml_parser.cpp  yaml_printer.cpp
src/src/pq/: cli_args.cpp  navigator.cpp  output_formatter.cpp  path_parser.cpp  pq_main.cpp  test_parser_main.cpp
test/: CMakeLists.txt  bug_frechet_derivative_type.cpp  bug_object_vs_string_defaults.cpp  test_anyof_defaults.cpp  test_anyof_error_reporting.cpp  test_cli_convert.cpp  test_cli_help.cpp  test_cli_parser_selection.cpp  test_comments.cpp  test_deprecated.cpp  test_dictionary.cpp  test_ini.cpp  test_initializer.cpp  test_json.cpp  test_parse.cpp  test_parse_errors.cpp  test_parse_examples.cpp  test_parsec.cpp  test_pq_bash.sh  test_pq_cli_args.cpp  test_pq_navigator.cpp  test_pq_output_formatter.cpp  test_pq_path_parser.cpp  test_pretty_print.cpp  test_ron.cpp  test_setdefaults.cpp  test_toml.cpp  test_validate.cpp  test_validate_additional_properties.cpp  test_validate_cfd.cpp  test_validate_hs_schema_examples.cpp  test_validate_medium_schema.cpp  test_validate_medium_schema_fail.cpp  test_validate_multi_errors.cpp  test_validate_phase1.cpp  test_validate_phase2.cpp  test_validate_unevaluated_properties.cpp  test_yaml.cpp
torture/: ex1.json  ex2.json
